RESOLVED FIXED 246127
Fix build errors associated with disabling ORIENTATION_EVENTS
https://bugs.webkit.org/show_bug.cgi?id=246127
Summary Fix build errors associated with disabling ORIENTATION_EVENTS
Megan Gardner
Reported 2022-10-05 17:42:38 PDT
Fix build errors associated with disabling ORIENTATION_EVENTS
Attachments
Megan Gardner
Comment 1 2022-10-05 17:44:42 PDT
Megan Gardner
Comment 2 2022-10-05 17:46:14 PDT
EWS
Comment 3 2022-10-05 19:02:59 PDT
Committed 255203@main (7a78039d6da3): <https://commits.webkit.org/255203@main> Reviewed commits have been landed. Closing PR #5062 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.