Fix build errors associated with disabling ORIENTATION_EVENTS https://bugs.webkit.org/show_bug.cgi?id=246127 rdar://99450478

Reviewed by Tim Horton.

* Source/WebKit/WebProcess/WebCoreSupport/ios/WebChromeClientIOS.mm:
* Source/WebKit/WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::setDeviceOrientation):
* Source/WebKitLegacy/mac/WebView/WebFrame.mm:
(-[WebFrame deviceOrientationChanged]):

Canonical link: https://commits.webkit.org/255203@main